--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.39.0",
     "@types/node": "20.6.2",
     "@types/react": "^19.1.8",
@@ -55,7 +56,6 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "next": "^15.3.3",
-    "next-themes": "^0.3.0",
     "postcss": "8.4.30",
     "react": "^19.1.0",
     "react-day-picker": "^8.10.1",
